test/language/spec/stdlib/invalid/slice_unknown_t.topo
// TEST: slice<UnknownType> with unknown inner type
// EXPECT-ERROR: invalid type parameter of 'slice'.*unknown type 'UnknownType'

namespace bad {
  public:
    slice<UnknownType> samples();
}
